crates/ars-components/src/date_time/date_time_picker/snapshots/ars_components__date_time__date_time_picker__tests__positioner_open.snap
---
source: crates/ars-components/src/date_time/date_time_picker/tests.rs
expression: snapshot_attrs(&api.positioner_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "positioner",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "date-time-picker",
            ),
        ),
        (
            Id,
            String(
                "date-time-picker-positioner",
            ),
        ),
    ],
    styles: [],
}
