crates/ars-components/src/date_time/date_time_picker/snapshots/ars_components__date_time__date_time_picker__tests__root_disabled.snap
---
source: crates/ars-components/src/date_time/date_time_picker/tests.rs
expression: snapshot_attrs(&api.root_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-disabled",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "date-time-picker",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "idle",
            ),
        ),
        (
            Id,
            String(
                "date-time-picker",
            ),
        ),
    ],
    styles: [],
}
