crates/ars-components/src/date_time/date_time_picker/snapshots/ars_components__date_time__date_time_picker__tests__segment_day_period_pm.snap
---
source: crates/ars-components/src/date_time/date_time_picker/tests.rs
expression: "snapshot_attrs(&api.segment_attrs(&DateSegmentKind::DayPeriod))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "segment",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "date-time-picker",
            ),
        ),
        (
            Data(
                "ars-segment",
            ),
            String(
                "day-period",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "AM/PM",
            ),
        ),
        (
            Aria(
                ValueMax,
            ),
            String(
                "1",
            ),
        ),
        (
            Aria(
                ValueMin,
            ),
            String(
                "0",
            ),
        ),
        (
            Aria(
                ValueNow,
            ),
            String(
                "1",
            ),
        ),
        (
            Aria(
                ValueText,
            ),
            String(
                "PM",
            ),
        ),
        (
            Id,
            String(
                "date-time-picker-segment-day-period",
            ),
        ),
        (
            Role,
            String(
                "spinbutton",
            ),
        ),
        (
            TabIndex,
            String(
                "-1",
            ),
        ),
    ],
    styles: [],
}
