crates/ars-components/src/date_time/date_time_picker/snapshots/ars_components__date_time__date_time_picker__tests__segment_disabled.snap
---
source: crates/ars-components/src/date_time/date_time_picker/tests.rs
expression: "snapshot_attrs(&api.segment_attrs(&DateSegmentKind::Month))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "segment",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "date-time-picker",
            ),
        ),
        (
            Data(
                "ars-segment",
            ),
            String(
                "month",
            ),
        ),
        (
            Aria(
                Disabled,
            ),
            String(
                "true",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Month",
            ),
        ),
        (
            Aria(
                ValueMax,
            ),
            String(
                "12",
            ),
        ),
        (
            Aria(
                ValueMin,
            ),
            String(
                "1",
            ),
        ),
        (
            Aria(
                ValueText,
            ),
            String(
                "mm",
            ),
        ),
        (
            Id,
            String(
                "date-time-picker-segment-month",
            ),
        ),
        (
            InputMode,
            String(
                "numeric",
            ),
        ),
        (
            Role,
            String(
                "spinbutton",
            ),
        ),
        (
            TabIndex,
            String(
                "-1",
            ),
        ),
    ],
    styles: [],
}
